tests/baselines/reference/sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues(target=es2015).errors.txt
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(29,39): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(32,39): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(35,39): error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(39,55): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(43,55): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(48,5): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(53,66): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(56,67): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(59,67): error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(68,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(77,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts(86,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues.ts (12 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    interface Robot {
        name: string;
        skill: string;
    }
    
    interface MultiRobot {
        name: string;
        skills: {
            primary?: string;
            secondary?: string;
        };
    }
    
    let robots: Robot[] = [{ name: "mower", skill: "mowing" }, { name: "trimmer", skill: "trimming" }];
    let multiRobots: MultiRobot[] = [{ name: "mower", skills: { primary: "mowing", secondary: "none" } },
        { name: "trimmer", skills: { primary: "trimming", secondary: "edging" } }];
    
    function getRobots() {
        return robots;
    }
    
    function getMultiRobots() {
        return multiRobots;
    }
    
    for (let {name: nameA = "noName" } of robots) {
                                          ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let {name: nameA = "noName" } of getRobots()) {
                                          ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let {name: nameA = "noName" } of [{ name: "mower", skill: "mowing" }, { name: "trimmer", skill: "trimming" }]) {
                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let { skills: { primary: primaryA = "primary", secondary: secondaryA = "secondary" } =
        { primary: "nosKill", secondary: "noSkill" } } of multiRobots) {
                                                          ~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primaryA);
    }
    for (let { skills: { primary: primaryA = "primary", secondary: secondaryA = "secondary" } =
        { primary: "nosKill", secondary: "noSkill" } } of getMultiRobots()) {
                                                          ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primaryA);
    }
    for (let { skills: { primary: primaryA = "primary", secondary: secondaryA = "secondary" } =
        { primary: "nosKill", secondary: "noSkill" } } of
        <MultiRobot[]>[{ name: "mower", skills: { primary: "mowing", secondary: "none" } },
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        { name: "trimmer", skills: { primary: "trimming", secondary: "edging" } }]) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primaryA);
    }
    
    for (let {name: nameA = "noName", skill: skillA = "noSkill" } of robots) {
                                                                     ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let {name: nameA = "noName", skill: skillA = "noSkill"  } of getRobots()) {
                                                                      ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let {name: nameA = "noName", skill: skillA = "noSkill"  } of [{ name: "mower", skill: "mowing" }, { name: "trimmer", skill: "trimming" }]) {
                                                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let {
        name: nameA = "noName",
        skills: {
            primary: primaryA = "primary",
            secondary: secondaryA = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of multiRobots) {
         ~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let {
        name: nameA = "noName",
        skills: {
            primary: primaryA = "primary",
            secondary: secondaryA = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of getMultiRobots()) {
         ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let {
        name: nameA = "noName",
        skills: {
            primary: primaryA = "primary",
            secondary: secondaryA = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of <MultiRobot[]>[{ name: "mower", skills: { primary: "mowing", secondary: "none" } },
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        { name: "trimmer", skills: { primary: "trimming", secondary: "edging" } }]) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }